k8s/webserver/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-backend
  name: web-backend-deployment
  namespace: bigdata
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-backend
      namespace: bigdata
    spec:
      containers:
        - image: quandao073/web-backend:v2.1.0
          imagePullPolicy: Always
          name: web-backend
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /run/config/application.properties
              name: web-backend-application-properties-config-volume
              subPath: application.properties
      volumes:
        - configMap:
            defaultMode: 420
            name: web-backend-application-properties-configmap
          name: web-backend-application-properties-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: web-backend-service
  namespace: bigdata
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: web-backend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-backend-ingress
  namespace: bigdata
spec:
  ingressClassName: nginx
  rules:
    - host: api-quanda.web-backend.local
      http:
        paths:
          - backend:
              service:
                name: web-backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
