k8s/webserver/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-frontend
  name: web-frontend-deployment
  namespace: bigdata
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-frontend
      namespace: bigdata
    spec:
      containers:
        - image: quandao073/web-frontend:v1.3
          imagePullPolicy: Always
          name: web-frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-service
  namespace: bigdata
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-frontend-ingress
  namespace: bigdata
spec:
  ingressClassName: nginx
  rules:
    - host: quanda.web-frontend.local
      http:
        paths:
          - backend:
              service:
                name: web-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
